--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -1,8 +1,7 @@
-<!doctype html>
 <html>
 	<head>
 		<title>plxs.spase bot</title>
-		<script src="main.js"></script>
+		<script src="popup.js"></script>
 		<style type="text/css">
 			.message {
 				width: 200px;
